--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esercizio U1-S2-G3</title>
+    <title>Esercizio U1-S2-G3 Soluzione</title>
 </head>
 <body>
     <h1>Esercizio U1-S2-G3</h1>
